# rules_moonbit

./: .bazelrc  .gitignore  ASSESSMENT_COMPARISON.md  BUILD.bazel  CONTRIBUTING.md  CROSS_COMPILATION_PLAN.md  FINAL_ASSESSMENT.md  GITHUB_SETUP.md  HERMETIC_TOOLCHAIN.md  IMPLEMENTATION_SUMMARY.md  ISSUE_TEMPLATE_wasm_component.md  JSON_INTEGRATION.md  MIGRATION_GUIDE.md  MODULE.bazel  README.md  REPOSITORY_SIZE_ANALYSIS.md  TOOLCHAIN_WIRING_PROGRESS.md  WASM_COMPONENT_DELEGATION.md  WASM_COMPONENT_MODEL.md  WASM_TESTING.md  WORKSPACE  fix_toolchain_attrs.py  simple_toolchain.bzl  test_simple.bzl  test_toolchain.sh  test_working_setup.sh
.bcr/: metadata.template.json  source.template.json
.github/workflows/: publish.yml
examples/component_integration/: BUILD.bazel  math.mbt  math.wit
examples/comprehensive_test/: BUILD.bazel
examples/debug_profiling/: BUILD.bazel
examples/ffi_integration/: BUILD.bazel  ffi_example.mbt
examples/hello_main/: BUILD.bazel  main.mbt
examples/hermetic/: MODULE.bazel
examples/hermetic_example/: BUILD.bazel  lib.mbt  main.mbt
examples/json_integration/: BUILD.bazel  lib.mbt  main.mbt  test.mbt
examples/minimal/: BUILD.bazel  minimal.mbt
examples/modern/: BUILD.bazel  main.mbt  modern.mbt
examples/multi_target/: BUILD.bazel  main.mbt  shared.mbt
examples/optimization/: BUILD.bazel  math.mbt
examples/package_registry/: BUILD.bazel
examples/simple/: BUILD.bazel  simple.mbt
examples/toolchain/: BUILD.bazel
moonbit/: BUILD.bazel  defs.bzl  extensions.bzl  minimal.bzl  providers.bzl
moonbit/checksums/: BUILD.bazel  PLATFORM_STATUS.md  checksum_integration_test.bzl  moonbit.json  moonbit_v2.json  registry.bzl  registry_v2.bzl
moonbit/examples/: BUILD.bazel  example_lib.mbt  example_test.mbt  main.mbt
moonbit/private/: BUILD.bazel  basic_compilation.bzl  compilation.bzl  compilation.bzl.full  compilation_full.bzl  component_utils.bzl  debug_utils.bzl  diagnostics.bzl  ffi_utils.bzl  json_utils.bzl  moon.bzl  moon.bzl.backup  moonbit_compiler_integration.bzl  optimization_utils.bzl  package_utils.bzl  platforms.bzl  simple_compilation.bzl  simple_moon.bzl  toolchain.bzl  toolchain_utils.bzl
moonbit/test/: BUILD.bazel  integration_test.bzl
moonbit/toolchain/: BUILD.bazel
moonbit/tools/: BUILD.bazel  enhanced_hermetic_toolchain.bzl  hermetic_toolchain.bzl  moonbit_toolchain.BUILD  vendor_toolchains.bzl
moonbit_toolchain/: BUILD.bazel  README.md  WORKSPACE  moon
test/: BUILD.bazel  compiler_integration_test.bzl  compiler_integration_test.sh  component_integration_test.bzl  component_integration_test.sh  debug_test.bzl  debug_test.sh  direct_test.bzl  ffi_integration_test.bzl  ffi_integration_test.sh  hello_world.sh  json_integration_test.bzl  json_integration_test.sh  multi_target_test.bzl  optimization_test.bzl  optimization_test.sh  package_test.bzl  package_test.sh  simple_moonbit_test.bzl  simple_test.bzl  test.mbt  test2.mbt  toolchain_test.bzl  toolchain_test.sh
test/defs_test/: BUILD.bazel  test.mbt
test/hermetic/: BUILD.bazel  checksum_registry_test.bzl  simple_test.bzl  toolchain_checksum_test.sh  toolchain_test.bzl  toolchain_vendor_test.sh  validate_hermetic.sh
test/simple/: BUILD.bazel  test.mbt
test/unit/: BUILD.bazel  moonbit_library_test.bzl
tools/: README.md  get_windows_checksum.sh
tools/checksum_updater/: checksum_updater.bzl
