# BUILD file for moonbit package

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

# Define MoonBit toolchain type for proper toolchain resolution
toolchain_type(
    name = "moonbit_toolchain_type",
)

# Public API
bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        ":providers",
        "//moonbit/private:moonbit_library",
    ],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
)

exports_files([
    "defs.bzl",
    "providers.bzl",
])
