# WebAssembly Component Model integration example
# This demonstrates the moonbit_component rule that delegates to rules_wasm_component

load("//moonbit:defs.bzl", "moonbit_component")

# WebAssembly Component using the new moonbit_component rule
moonbit_component(
    name = "math_component",
    srcs = ["math.mbt"],
    wit_deps = [":math_wit"],  # WIT interface dependencies
    deps = [],  # MoonBit dependencies (if any)
)

# WIT interface file (WebAssembly Interface Type)
# This defines the component interface that will be used by rules_wasm_component
# to create the WebAssembly component from MoonBit code

# Note: The moonbit_component rule provides seamless integration with
# the WebAssembly Component Model ecosystem by:
# 1. Compiling MoonBit to WebAssembly
# 2. Delegating component creation to rules_wasm_component
# 3. Handling WIT interface processing
# 4. Providing component validation and testing support