# MoonBit checksums

package(default_visibility = ["//visibility:public"])

# Export checksum JSON files (both legacy and new formats)
exports_files([
    "moonbit.json",      # Legacy format (backward compatibility)
    "moonbit_v2.json",   # New comprehensive format
])

# Export registry API (both legacy and enhanced versions)
exports_files([
    "registry.bzl",      # Legacy registry
    "registry_v2.bzl",   # Enhanced registry with new features
])

# Integration tests
sh_test(
    name = "checksum_integration_test",
    srcs = [":checksum_integration_test.sh"],
    data = [
        ":registry.bzl",
        ":registry_v2.bzl",
        ":moonbit.json",
    ],
)
