# BUILD file for private implementation

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//moonbit:__subpackages__"])

bzl_library(
    name = "moonbit_library",
    srcs = ["moon.bzl"],
    deps = [
        ":toolchain",
    ],
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
)

exports_files([
    "moon.bzl",
    "toolchain.bzl",
])
