# MoonBit Test Infrastructure

# Test the basic toolchain integration
moonbit_integration_test(
    name = "moonbit_integration_test",
    size = "small",
)

# Test compilation functionality
moonbit_compilation_test(
    name = "moonbit_compilation_test",
    size = "small",
)

# Test component functionality
moonbit_component_test(
    name = "moonbit_component_test",
    size = "small",
)

# Test platform functionality
moonbit_platform_test(
    name = "moonbit_platform_test",
    size = "small",
)

# Test health check functionality
moonbit_health_check_test(
    name = "moonbit_health_check_test",
    size = "small",
)

# Test suite that runs all tests
moonbit_test_suite(
    name = "moonbit_all_tests",
    tests = [
        ":moonbit_integration_test",
        ":moonbit_compilation_test",
        ":moonbit_component_test",
        ":moonbit_platform_test",
        ":moonbit_health_check_test",
    ],
)

# Define a simple test suite rule
def moonbit_test_suite(name, tests, **kwargs):
    """Define a test suite for MoonBit tests."""
    native.test_suite(
        name = name,
        tests = tests,
        **kwargs
    )