# MoonBit Test Infrastructure
# TODO: Implement proper test rules

# Placeholder for test suite
# The test macros (moonbit_integration_test, etc.) need to be defined
# before they can be used here.

load("@bazel_skylib//rules:build_test.bzl", "build_test")

# Simple build test to verify the rules can be loaded
build_test(
    name = "rules_load_test",
    targets = [
        "//moonbit:defs",
    ],
)
