# BUILD file for MoonBit toolchain

package(default_visibility = ["//visibility:public"])

# Load the moonbit_toolchain rule
load("//moonbit/private:toolchain.bzl", "moonbit_toolchain")

# Define the MoonBit toolchain target
moonbit_toolchain(
    name = "moonbit_toolchain",
    version = "0.6.33",
)

# Register the toolchain
toolchain(
    name = "moonbit_toolchain_type",
    toolchain = ":moonbit_toolchain",
    toolchain_type = "//moonbit:moonbit_toolchain_type",
)