# Unit tests for rules_moonbit

load("@bazel_skylib//lib:unittest.bzl", "analysistest")

# Create a simple test that verifies the moonbit_library rule can be loaded and analyzed
analysistest(
    name = "moonbit_library_test",
    srcs = [":moonbit_library_test.bzl"],
    deps = [
        "@rules_moonbit//moonbit:defs.bzl",
        "@bazel_skylib//lib:unittest.bzl",
    ],
)